<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".auth.Login">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/father"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="100dp"
            android:background="@drawable/custom_edittext">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardCornerRadius="60dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/map_car1"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/loginText"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/purple"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:hint="@string/user"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/loginButton"
                    android:text="@string/login_button"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/purple"
                    app:cornerRadius = "20dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/login_signup"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:clickable="true"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</ScrollView>
