<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".auth.Signup">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/text_bienvenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:textColor="@color/purple"/>

            <TextView
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_nombre"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>

            <TextView
                android:id="@+id/login_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_correo"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="Ej. Benjamin"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="Ej. benjamin@example.com"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="Contraseña"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="Confirma contraseña"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/siguienteBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/siguiente"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/signup_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/loginTextt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/signup_login"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:clickable="true"
        android:layout_marginBottom="20dp"/>

    </LinearLayout>
</ScrollView>
