<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/custom_toolbar"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@drawable/about_bk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/father"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="100dp"
                    app:cardBackgroundColor="#80FFFFFF">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="45dp"
                                app:cardElevation="0dp"
                                android:layout_margin="15dp"
                                app:cardBackgroundColor="@color/white"
                                android:layout_gravity="center">
                                <ImageView
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:src="@drawable/about_info_benjamin"/>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="45dp"
                                app:cardElevation="0dp"
                                android:layout_margin="15dp"
                                app:cardBackgroundColor="@color/white"
                                android:layout_gravity="center">
                                <ImageView
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:src="@drawable/about_info_daniela"/>
                            </androidx.cardview.widget.CardView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/about_tittle"
                                android:textColor="@color/lavender"
                                android:textAlignment="center"
                                android:textSize="20dp"/>

                            <com.codesgood.views.JustifiedTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="15dp"
                                android:textColor="@color/black"
                                android:text="@string/about_nosotros"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/menu_color_item"/>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@color/orage_fire"
                                android:layout_marginTop="20dp"
                                android:textSize="15dp"
                                android:text="Nuestra Visión"/>

                            <com.codesgood.views.JustifiedTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:textColor="@color/black"
                                android:text="@string/about_vision"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/menu_color_item"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@color/orage_fire"
                                android:layout_marginTop="20dp"
                                android:textSize="15dp"
                                android:text="Nuestra Misión"/>

                            <com.codesgood.views.JustifiedTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:textColor="@color/black"
                                android:text="@string/about_mision"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/menu_color_item"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@color/orage_fire"
                                android:layout_marginTop="20dp"
                                android:textSize="15dp"
                                android:text="Nuestros Valores"/>

                            <com.codesgood.views.JustifiedTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:textColor="@color/black"
                                android:text="@string/about_valores"/>


                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>





            </LinearLayout>

        </ScrollView>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">
        <include
            layout="@layout/custom_nav_drawer"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>